Update reference to blog with https

--- a/resume.tex
+++ b/resume.tex
@@ -12,7 +12,7 @@
 {1209 København K}
 {+45 2971 2097}
 {\href{mailto:carstenj@gmail.com}{carstenj@gmail.com}}
-{\href{https://carstenj.io/}{http://carstenj.io/}}
+{\href{https://carstenj.io/}{https://carstenj.io/}}
 %==============================================================================
 % Introduktion
 %==============================================================================
