Opdatering af CV

--- a/resume.tex
+++ b/resume.tex
@@ -17,7 +17,7 @@
 % Introduktion
 %==============================================================================
 \section{Kort fortalt}
-23 års erfaring med professionel software udvikling af large scale systemer primært til den finansielle sektor. Erfaring med matematisk baseret software indenfor områderne finans, optimering og supply chain management. Omfattende forretningsviden på områderne pension (6 år), finans, bank og capital markets (12 år) samt ERP systemer (5 år). Mit kendetegn er levering til tiden i den ønskede kvalitet, mens min største styrke er at kunne fungere som bindeled mellem forretning og udvikling.
+23 års erfaring med professionel software udvikling af large scale systemer primært til den finansielle sektor. Erfaring med matematisk baseret software indenfor områderne finans, optimering og supply chain management. Omfattende forretningsviden på områderne pension og livsforsikring (6 år), finans, bank og capital markets (12 år) samt ERP systemer (5 år). Mit kendetegn er levering til tiden i den ønskede kvalitet, mens min største styrke er at kunne fungere som bindeled mellem forretning og udvikling.
 
 %==============================================================================
 % Erhvervserfaring
@@ -55,7 +55,7 @@ Liv og Pension}
 {
 \opgave{havde ansvaret for front-end delen af en ny ``Sales and Operations Planning'' feature til næste version af AX}
 \opgave{havde medansvar i AX-kerneudvikling til Microsoft Dynamics AX 4.0}
-\opgave{deltog i udviklingen af innovativt ERP prototype projekt baseret på SOA arkitektur og en rolle baseret konfigurerbar opsætning af forretningsprocesser.}
+\opgave{deltog i udviklingen af innovativt ERP prototype projekt baseret på SOA arkitektur og en rollebaseret konfigurerbar opsætning af forretningsprocesser.}
 }
 
 \job{Chief Financial \\ Consultant}{SimCorp}{Okt 2000 -- Feb 2003} %chktex 8
@@ -69,7 +69,7 @@ Liv og Pension}
 {Som analytiker var jeg med til at}
 {
 \opgave{udvikle funktionalitet og Excel løsninger til Nordea Analytics platformen}
-\opgave{udvikle Markets interne system til realkreditmodellering}
+\opgave{udvikle Markets interne modeller til prepayment- og realkreditmodellering}
 \opgave{implementere, teste og konvertere et ældre system til Infinity Financial Technology systemet med ansvar for rentederivater}
 }
 
@@ -77,7 +77,7 @@ Liv og Pension}
 {Som software udvikler var det min opgave at deltage i}
 {
 \opgave{den årlige release af en række Excel add-ins}
-\opgave{koordineringen af en tværafdelings udviklingsopgave af et modul til Ka\-pi\-tal\-dæk\-nings\-di\-rek\-ti\-vet}
+\opgave{koordineringen af en tværafdelings udviklingsopgave af modul til Ka\-pi\-tal\-dæk\-nings\-di\-rek\-ti\-vet}
 \opgave{udviklingen af matematisk finansielt bibliotek i C med tilhørende unit tests}
 }
 
@@ -97,19 +97,21 @@ Liv og Pension}
 % Kompetencer
 %===============================================================================
 \section{Kompetencer}
-\kompetence{Programmingssprog \\ og frameworks}{Produktionserfaring med: C\#, .NET, WCP, WPF, LINQ, C\(++\), STL, Boost og C \\ Derudover kendskab til F\#, Scala, Python, Java, JavaScript og R}
+\kompetence{Programmingssprog \\ og frameworks}{Produktionserfaring med: C\#, .NET Framework og Core, WPF, WCF, LINQ, ASP.NET, C\(++\), STL, Boost og C. Derudover kendskab til F\#, Scala, Python, JavaScript og R}
 \\[0.2cm]
 \kompetence{Data systemer}{SQL Server, MongoDB, Redis, RabbitMQ og Kafka}
 \\[0.2cm]
-\kompetence{Favorit Nuget pakker}{Serilog, Rx, Akka, Polly, Dapper, XUnit, BenchmarkDotNet, Newtonsoft.Json}
+\kompetence{Favorit Nuget pakker}{Rx, Akka, Polly, Dapper, Serilog, XUnit, BenchmarkDotNet}
 \\[0.2cm]
-\kompetence{DevOps tools}{Elastic Stack, InfluxDB, Grafana, GoCD, Git, Mercurial, TFS, Icinga2, VictorOps}
+\kompetence{DevOps tools}{ELK, InfluxDB, Grafana, GoCD, Git, Mercurial, TFS, Icinga2, VictorOps}
 
 %===============================================================================
 % Kurser
 %===============================================================================
 \begin{onehalfspacing}
 \section{Udvalgte kurser}
+\kursus{2018}{Advanced Akka.NET Topics (kommende)}
+
 \kursus{2018}{Fast Track to Chaos Engineering med Russ Miles}
 
 \kursus{2017}{Implementing Domain-Driven Design Workshop med Vaughn Vernon}
@@ -138,12 +140,9 @@ Liv og Pension}
 %===============================================================================
 \section{Anbefaling og referencer}
 Se venligst min \href{https://dk.linkedin.com/in/carstenjoergensen}{LinkedIn}
-profil for en række anbefalinger.
-%\\[0.25cm]
-
-Personlige referencer med tidligere ledere på forespørgsel.
+profil for en række anbefalinger. Personlige referencer med tidligere ledere på forespørgsel.
 
 \section{Personligt}
-Jeg er gift med Lene. Vi bor i centrum af København og har et lille sommerhus syd for Tisvilde Hegn. I min fritid dyrker jeg løb, svømning, crossfit og yoga.
+Jeg er gift med Lene. Vi bor i centrum af København og har et lille sommerhus syd for Tisvilde Hegn. I min fritid dyrker jeg løb, svømning, crossfit og yin yoga. Jeg holder af at læse og bruge min hænder til at ordne cykler. Og så selvfølgelig at følge med i nye teknologier.
 
 \end{document}
