New color scheme

--- a/setup.tex
+++ b/setup.tex
@@ -1,5 +1,6 @@
 \usepackage{fontspec}
 \usepackage{polyglossia}
+\setdefaultlanguage{danish}
 \usepackage[left=1.5cm, right=1.5cm, vmargin=1.5cm, noheadfoot, marginparwidth=0cm]{geometry} % sidemargener
 \usepackage[final]{microtype} % the art of enhancing the appearance and readability of a document
 \usepackage{titlesec}
@@ -14,7 +15,7 @@
 \usepackage{setspace}
 
 \definecolor{linkColor}{HTML}{408AF8}
-\definecolor{bulletColor}{HTML}{1D8BB9} % 336F3A
+\definecolor{bulletColor}{HTML}{3D858D} % 1D8BB9 336F3A
 
 \setmainfont[Ligatures=TeX]{Helvetica Neue}[
   BoldFont = Helvetica Neue Bold]
