--- a/resume.tex
+++ b/resume.tex
@@ -110,7 +110,7 @@ Liv og Pension}
 %===============================================================================
 \begin{onehalfspacing}
 \section{Udvalgte kurser}
-\kursus{2018}{Advanced Akka.NET Topics (kommende)}
+\kursus{2018}{Advanced Akka.NET Topics med Aaron Stannard}
 
 \kursus{2018}{Fast Track to Chaos Engineering med Russ Miles}
 
