--- a/setup.tex
+++ b/setup.tex
@@ -17,7 +17,7 @@
 \definecolor{linkColor}{HTML}{408AF8}
 \definecolor{bulletColor}{HTML}{3D858D} % 1D8BB9 336F3A
 
-\setmainfont[Ligatures=TeX]{Helvetica Neue}[
+\setmainfont[Ligatures=TeX]{akkurat}[
   BoldFont = Helvetica Neue Bold]
 
 \setlength{\parindent}{0pt}
