Opdatering af rolle i DB

--- a/resume.tex
+++ b/resume.tex
@@ -28,7 +28,7 @@
 \job{Lead Software Engineer}{Danske Bank, C\&I}{Jan 2016 --}
 {Ansat i Derivative Risk and IT, hvor jeg arbejder med 360-graders udvikling af}
 {
-\opgave{Client Clearing for OTC og ETD produkter (Lead Dev)}
+\opgave{Client Clearing for OTC og ETD produkter (Arkitekt og Lead Dev)}
 \opgave{MiFID II post-trade transparency rapportering (Lead Dev)}
 \opgave{post-trade services til både internt brug og eksterne kunder}
 \opgave{bankens interne model til Value-at-Risk beregninger}
