Opdatering af CV

--- a/resume.tex
+++ b/resume.tex
@@ -12,7 +12,7 @@
 {1209 København K}
 {+45 2971 2097}
 {\href{mailto:carstenj@gmail.com}{carstenj@gmail.com}}
-{\href{https://carstenj.io/}{https://carstenj.io/}}
+{\href{https://carsten-j.github.io/}{https://carsten-j.github.io/}}
 %==============================================================================
 % Introduktion
 %==============================================================================
@@ -25,11 +25,19 @@
 %==============================================================================
 \section{Erhvervserfaring}
 
-\job{Lead Software Engineer}{Danske Bank, C\&I}{Jan 2016 --}
+\job{Senior Risk Manager}{P+, DIP \& JØP}{Juni 2019 --}
+{Udvikling af software i Python til finansiel risikostyring med henblik på
+}
+{
+\opgave{visualisering af finansielle data}
+\opgave{modellering af VaR og cVaR}
+}
+
+\job{Chief Software Engineer}{Danske Bank, C\&I}{Jan 2016 -- Maj 2019}
 {Ansat i Derivative Risk and IT, hvor jeg arbejder med 360-graders udvikling af}
 {
 \opgave{Client Clearing for OTC og ETD produkter (Arkitekt og Lead Dev)}
-\opgave{MiFID II post-trade transparency rapportering (Lead Dev)}
+\opgave{MiFID II post-trade realtids transparency rapportering (Lead Dev)}
 \opgave{post-trade services til både internt brug og eksterne kunder}
 \opgave{bankens interne model til Value-at-Risk beregninger}
 }
@@ -41,6 +49,7 @@
 \opgave{bidrage til, at Nationalbankens IT-systemer udvikler sig konsistent og i samme retning}
 }
 
+%\cofeCm{0.9}{1}{180}{0}{0}
 \job{Softwareudvikler og \\ arkitekt}{Edlund A/S}{Dec 2008 -- Okt 2014} %chktex 8
 {Som softwareudvikler og arkitekt var det min opgave at udvikle software baseret på forsikringsmatematiske principper og}
 {
@@ -97,13 +106,11 @@ Liv og Pension}
 % Kompetencer
 %===============================================================================
 \section{Kompetencer}
-\kompetence{Programmingssprog \\ og frameworks}{Produktionserfaring med: C\#, .NET Framework og Core, WPF, WCF, LINQ, ASP.NET, C\(++\), STL, Boost og C. Derudover kendskab til F\#, Scala, Python, JavaScript og R}
+\kompetence{Programmingssprog \\ og frameworks}{Produktionserfaring med: Python, C\#, .NET Framework og Core, WPF, WCF, LINQ, ASP.NET, C\(++\), STL, Boost og C. Derudover kendskab til F\#, Scala og R}
 \\[0.2cm]
 \kompetence{Data systemer}{SQL Server, MongoDB, Redis, RabbitMQ og Kafka}
 \\[0.2cm]
-\kompetence{Favorit Nuget pakker}{Rx, Akka, Polly, Dapper, Serilog, XUnit, BenchmarkDotNet}
-\\[0.2cm]
-\kompetence{DevOps tools}{ELK, InfluxDB, Grafana, GoCD, Git, Mercurial, TFS, Icinga2, VictorOps}
+\kompetence{DevOps tools}{Docker, ELK, InfluxDB, Grafana, GoCD, Git, Mercurial, TFS, Icinga2, VictorOps}
 
 %===============================================================================
 % Kurser
