--- a/setup.tex
+++ b/setup.tex
@@ -2,7 +2,7 @@
 \usepackage{polyglossia}
 \setdefaultlanguage{danish}
 \usepackage[left=1.5cm, right=1.5cm, vmargin=1.5cm, noheadfoot, marginparwidth=0cm]{geometry} % sidemargener
-\usepackage[final]{microtype} % the art of enhancing the appearance and readability of a document
+%\usepackage[final]{microtype} % the art of enhancing the appearance and readability of a document
 \usepackage{titlesec}
 \usepackage{color}
 \usepackage{grid-system}
@@ -11,7 +11,7 @@
 \usepackage{hyperref} % hyper links
 \usepackage{marvosym} % symboler for telefon, email m.v.
 \usepackage{nopageno} % undlad side-nummer
-
+%\usepackage{coffee4}
 \usepackage{setspace}
 
 \definecolor{linkColor}{HTML}{408AF8}
