Ny version af CV

--- a/resume.tex
+++ b/resume.tex
@@ -17,7 +17,7 @@
 % Introduktion
 %==============================================================================
 \section{Kort fortalt}
-23 års erfaring med professionel software udvikling af large scale systemer primært til den finansielle sektor. Erfaring med matematisk baseret software indenfor områderne finans, optimering og supply chain management. Omfattende forretningsviden på områderne pension og livsforsikring (6 år), finans, bank og capital markets (12 år) samt ERP systemer (5 år). Mit kendetegn er levering til tiden i den ønskede kvalitet, mens min største styrke er at kunne fungere som bindeled mellem forretning og udvikling.
+24 års erfaring med professionel software udvikling af large scale systemer primært til den finansielle sektor. Erfaring med matematisk baseret software indenfor områderne finans, optimering og supply chain management. Omfattende forretningsviden på områderne pension og livsforsikring (6 år), finans, bank og capital markets (13 år) samt ERP systemer (5 år). Mit kendetegn er levering til tiden i den ønskede kvalitet, mens min største styrke er at kunne fungere som bindeled mellem forretning og udvikling.
 
 %==============================================================================
 % Erhvervserfaring
@@ -106,17 +106,19 @@ Liv og Pension}
 % Kompetencer
 %===============================================================================
 \section{Kompetencer}
-\kompetence{Programmingssprog \\ og frameworks}{Produktionserfaring med: Python, C\#, .NET Framework og Core, WPF, WCF, LINQ, ASP.NET, C\(++\), STL, Boost og C. Derudover kendskab til F\#, Scala og R}
+\kompetence{Programmingssprog \\ og frameworks}{Produktionserfaring med: Python, C\#, .NET Framework og Core, WPF, WCF, LINQ, ASP.NET Core, C\(++\), STL, Boost og C. Derudover kendskab til F\#, Scala og R}
 \\[0.2cm]
 \kompetence{Data systemer}{SQL Server, MongoDB, Redis, RabbitMQ og Kafka}
 \\[0.2cm]
-\kompetence{DevOps tools}{Docker, ELK, InfluxDB, Grafana, GoCD, Git, Mercurial, TFS, Icinga2, VictorOps}
+\kompetence{DevOps tools}{Docker, Ansible, ELK, InfluxDB, Grafana, GoCD, Git, Mercurial, TFS, Vic\-tor\-Ops, Icinga2, Bamboo, BitBucket}
 
 %===============================================================================
 % Kurser
 %===============================================================================
 \begin{onehalfspacing}
-\section{Udvalgte kurser}
+\section{Udvalgte kurser og konferencer}
+%\kursus{2019}{PyCon DE \& PyData Berlin }
+
 \kursus{2018}{Advanced Akka.NET Topics med Aaron Stannard}
 
 \kursus{2018}{Fast Track to Chaos Engineering med Russ Miles}
@@ -127,7 +129,7 @@ Liv og Pension}
 
 \kursus{2014}{Grundlæggende livsforsikringsmatematik (Liv1). Københavns Universitet}
 
-\kursus{2013}{Principles of Reactive Programming med Martin Odersky. Coursera}
+\kursus{2013}{Principles of Reactive Programming med Martin Odersky}
 
 \kursus{2012}{Essential SQL Server 2012 for Developers. DevelopMentor}
 
@@ -150,6 +152,6 @@ Se venligst min \href{https://dk.linkedin.com/in/carstenjoergensen}{LinkedIn}
 profil for en række anbefalinger. Personlige referencer med tidligere ledere på forespørgsel.
 
 \section{Personligt}
-Jeg er gift med Lene. Vi bor i centrum af København og har et lille sommerhus syd for Tisvilde Hegn. I min fritid dyrker jeg løb, svømning, crossfit og yin yoga. Jeg holder af at læse og bruge min hænder til at ordne cykler. Og så selvfølgelig at følge med i nye teknologier.
+Jeg er gift med Lene. Vi bor i centrum af København og har et lille sommerhus syd for Tisvilde Hegn. I min fritid dyrker jeg løb, svømning, crossfit og yoga. Jeg holder af at læse og bruge min hænder til at ordne cykler. Og så selvfølgelig at følge med i nye teknologier.
 
 \end{document}
