--- a/setup.tex
+++ b/setup.tex
@@ -1,7 +1,7 @@
 \usepackage{fontspec}
 \usepackage{polyglossia}
 \setdefaultlanguage{danish}
-\usepackage[left=1.5cm, right=1.5cm, vmargin=1.5cm, noheadfoot, marginparwidth=0cm]{geometry} % sidemargener
+\usepackage[left=1.5cm, right=1.5cm, vmargin=1.25cm, noheadfoot, marginparwidth=0cm]{geometry} % sidemargener
 %\usepackage[final]{microtype} % the art of enhancing the appearance and readability of a document
 \usepackage{titlesec}
 \usepackage{color}
@@ -15,7 +15,7 @@
 \usepackage{setspace}
 
 \definecolor{linkColor}{HTML}{408AF8}
-\definecolor{bulletColor}{HTML}{3D858D} % 1D8BB9 336F3A
+\definecolor{bulletColor}{HTML}{CAA239} % 1D8BB9 336F3A
 
 \setmainfont[Ligatures=TeX]{akkurat}[
   BoldFont = Helvetica Neue Bold]
