--- a/resume.tex
+++ b/resume.tex
@@ -117,7 +117,7 @@ Liv og Pension}
 %===============================================================================
 \begin{onehalfspacing}
 \section{Udvalgte kurser og konferencer}
-%\kursus{2019}{PyCon DE \& PyData Berlin }
+\kursus{2019}{PyCon DE \& PyData Berlin }
 
 \kursus{2018}{Advanced Akka.NET Topics med Aaron Stannard}
 
