--- a/resume.tex
+++ b/resume.tex
@@ -31,6 +31,7 @@
 {
 \opgave{visualisering af finansielle data}
 \opgave{modellering af VaR og cVaR}
+\opgave{opsætning af devops CI/CD pipelines baseret på BitBucket, Bamboo og Docker Swarm}
 }
 
 \job{Chief Software Engineer}{Danske Bank, C\&I}{Jan 2016 -- Maj 2019}
