--- a/setup.tex
+++ b/setup.tex
@@ -15,15 +15,16 @@
 \usepackage{setspace}
 
 \definecolor{linkColor}{HTML}{408AF8}
-\definecolor{bulletColor}{HTML}{CAA239} % 1D8BB9 336F3A
+\definecolor{bulletColor}{HTML}{3681C4} % 1D8BB9 336F3A
 
-\setmainfont[Ligatures=TeX]{akkurat}[
+\setmainfont[Ligatures=TeX]{Goldman Sans}[
   BoldFont = Helvetica Neue Bold]
 
 \setlength{\parindent}{0pt}
 \titleformat{\section}{\bfseries\Large\scshape\raggedright\color{bulletColor}}{}{0em}{}
 
 \newcommand*{\opgave}[1]{\(\textcolor{bulletColor}{\blacksquare}\) #1\\}
+\newcommand*{\teknologier}[1]{\(\textcolor{bulletColor}{\blacksquare}\) #1\\}
 
 \hypersetup{
      colorlinks   = true,
@@ -105,3 +106,4 @@
   \end{Cell}
 \end{Row}
 }
+
