--- a/resume.tex
+++ b/resume.tex
@@ -7,7 +7,7 @@
 % Kontakt info
 %===============================================================================
 \contactinfo{Carsten Jørgensen}
-{Lead Software Engineer og Arkitekt}
+{Senior Software Engineer}
 {Badstuestræde 18D, 1th}
 {1209 København K}
 {+45 2971 2097}
@@ -17,7 +17,7 @@
 % Introduktion
 %==============================================================================
 \section{Kort fortalt}
-24 års erfaring med professionel software udvikling af large scale systemer primært til den finansielle sektor. Erfaring med matematisk baseret software indenfor områderne finans, optimering og supply chain management. Omfattende forretningsviden på områderne pension og livsforsikring (6 år), finans, bank og capital markets (13 år) samt ERP systemer (5 år). Mit kendetegn er levering til tiden i den ønskede kvalitet, mens min største styrke er at kunne fungere som bindeled mellem forretning og udvikling.
+25 års erfaring med professionel software udvikling af large scale systemer primært til den finansielle sektor. Erfaring med software indenfor områderne finans, optimering, supply chain management og telekommunikation. Omfattende forretningsviden på områderne pension og livsforsikring (6 år), finans, bank og capital markets (13 år) samt ERP systemer (5 år). Mit kendetegn er levering til tiden i den ønskede kvalitet, mens min største styrke er at kunne fungere som bindeled mellem forretning og udvikling. Jeg har arbejdet som projektleder, scrum master og løsningsarkitekt. Men jeg vender altid tilbage til udviklerrollen, som er det, jeg brænder allermest for.
 
 %==============================================================================
 % Erhvervserfaring
@@ -25,22 +25,28 @@
 %==============================================================================
 \section{Erhvervserfaring}
 
-\job{Senior Risk Manager}{P+, DIP \& JØP}{Juni 2019 --}
-{Udvikling af software i Python til finansiel risikostyring med henblik på
+\job{Senior Software Developer}{CBB Mobil}{Maj 2020 --}
+{Ansat i Business Support Software afdeling, hvor vi har ansvaret for en platform som bruges af ca. 650000 kunder.
+}
+{
+\opgave{opdatering af online betalingsoplevelse med stærk kundeautentifikation under PSD2 regulativ.}
+}
+
+\job{Senior Risk Manager}{P+, Pension for \\Akademikere}{Juni 2019 -- April 2020}
+{Som senior softwareudvikler indefor risikostyring udvikler jeg software til
 }
 {
 \opgave{visualisering af finansielle data}
-\opgave{modellering af VaR og cVaR}
+\opgave{matematiske modeller til finansiel risikostyring}
 \opgave{opsætning af devops CI/CD pipelines baseret på BitBucket, Bamboo og Docker Swarm}
 }
 
 \job{Chief Software Engineer}{Danske Bank, C\&I}{Jan 2016 -- Maj 2019}
 {Ansat i Derivative Risk and IT, hvor jeg arbejder med 360-graders udvikling af}
 {
-\opgave{Client Clearing for OTC og ETD produkter (Arkitekt og Lead Dev)}
-\opgave{MiFID II post-trade realtids transparency rapportering (Lead Dev)}
-\opgave{post-trade services til både internt brug og eksterne kunder}
-\opgave{bankens interne model til Value-at-Risk beregninger}
+\opgave{realtids rapportering til eksterne myndigheder af regulatoriske krav}
+\opgave{eksponering af bankens softwareløsning som en service for eksterne kunder}
+\opgave{matematiske modeller til finansiel risikostyring}
 }
 
 \job{Løsningsarkitekt}{Danmarks Nationalbank}{Nov 2014 -- Dec 2015} %chktex 8
@@ -50,7 +56,6 @@
 \opgave{bidrage til, at Nationalbankens IT-systemer udvikler sig konsistent og i samme retning}
 }
 
-%\cofeCm{0.9}{1}{180}{0}{0}
 \job{Softwareudvikler og \\ arkitekt}{Edlund A/S}{Dec 2008 -- Okt 2014} %chktex 8
 {Som softwareudvikler og arkitekt var det min opgave at udvikle software baseret på forsikringsmatematiske principper og}
 {
@@ -117,7 +122,7 @@ Liv og Pension}
 % Kurser
 %===============================================================================
 \begin{onehalfspacing}
-\section{Udvalgte kurser og konferencer}
+\section{Nyere udvalgte kurser og konferencer}
 \kursus{2019}{PyCon DE \& PyData Berlin }
 
 \kursus{2018}{Advanced Akka.NET Topics med Aaron Stannard}
@@ -130,27 +135,21 @@ Liv og Pension}
 
 \kursus{2014}{Grundlæggende livsforsikringsmatematik (Liv1). Københavns Universitet}
 
-\kursus{2013}{Principles of Reactive Programming med Martin Odersky}
-
-\kursus{2012}{Essential SQL Server 2012 for Developers. DevelopMentor}
-
-\kursus{2010}{Certificeret SCRUM master. Trifork A/S}
-
 \end{onehalfspacing}
 %===============================================================================
 % Frivilligt arbejde
 %===============================================================================
 \section{Frivilligt arbejde}
-\uddannelse{Webmatematik}{Juni 2017 -- Maj 2018}{Skribent på \href{http://www.webmatematik.dk}{www.webmatematik.dk}} %chktex 8
+\uddannelse{Webmatematik}{Juni 2017 -- Maj 2018\\Maj 2020 --}{Content writer på \href{http://www.webmatematik.dk}{www.webmatematik.dk} og online lektiehjælper} %chktex 8
 \\[0.2cm]
 \uddannelse{Dansk Flygtningehjælp}{Jan 2014 -- Maj 2014}{Lektiecafe på Vesterbros Bibliotek, hvor jeg hjalp folkeskoleelever med deres ma\-te\-ma\-tik opgaver} %chktex 8
 
 %===============================================================================
 % Anbefaling og referencer
 %===============================================================================
-\section{Anbefaling og referencer}
-Se venligst min \href{https://dk.linkedin.com/in/carstenjoergensen}{LinkedIn}
-profil for en række anbefalinger. Personlige referencer med tidligere ledere på forespørgsel.
+%\section{Anbefaling og referencer}
+%Se venligst min \href{https://dk.linkedin.com/in/carstenjoergensen}{LinkedIn}
+%profil for en række anbefalinger. Personlige referencer med tidligere ledere på %forespørgsel.
 
 \section{Personligt}
 Jeg er gift med Lene. Vi bor i centrum af København og har et lille sommerhus syd for Tisvilde Hegn. I min fritid dyrker jeg løb, svømning, crossfit og yoga. Jeg holder af at læse og bruge min hænder til at ordne cykler. Og så selvfølgelig at følge med i nye teknologier.
